--- a/algorithm.org
+++ b/algorithm.org
@@ -57,7 +57,10 @@ void qsort(int* arr, int left, int right){
 * algorithm
 ** dp
 ** greedy
-* samsung stragegy
+* samsung strategy
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
-- 
+* project G
+http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
+http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
+
