--- a/algorithm.org
+++ b/algorithm.org
@@ -64,3 +64,7 @@ void qsort(int* arr, int left, int right){
 http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
 http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
 
+bigo notation : http://bigocheatsheet.com/
+
+
+http://www.reddit.com/search?q=google+interview+phone&restrict_sr=off&sort=relevance&t=all
