--- a/algorithm.org
+++ b/algorithm.org
@@ -55,8 +55,22 @@ void qsort(int* arr, int left, int right){
   priority_queue<int, vector<int>, greater<int>> pq_decreasing;
 #+END_SRC
 * algorithm
-** dp
+** max heap
+properties: A[p]>=A[i], left = 2*i+1(0-based idx), right=2*i+2, parent = i/2
+- maxHeapify
+- buildMaxHeap
+- heapSort
+
+priorityqueue using max heap
+- heapMaximum
+- heapExtractMax
+- heapIncreaseKey
+- maxHeapInsert
+
 ** greedy
+** graph
+*** dfs
+- topological sort : DAG(no cycle)
 * samsung strategy
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
