--- a/algorithm.org
+++ b/algorithm.org
@@ -70,7 +70,7 @@ priorityqueue using max heap
 ** greedy
 ** graph
 *** dfs
-- topological sort : DAG(no cycle)
+- topological sort : DAG(no cycle), see [[file:cpp/codejam/dictionary.cpp][dictionary]]
 * samsung strategy
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
