--- a/algorithm.org
+++ b/algorithm.org
@@ -71,6 +71,12 @@ priorityqueue using max heap
 ** graph
 *** dfs
 - topological sort : DAG(no cycle), see [[file:cpp/codejam/dictionary.cpp][dictionary]]
+#+BEGIN_SRC c++
+
+void toposort(){
+
+}
+#+END_SRC
 * samsung strategy
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
