--- a/algorithm.org
+++ b/algorithm.org
@@ -81,6 +81,33 @@ void toposort(){
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
 * project G
+** questions
+*** kth largest element
+quickselect
+#+BEGIN_SRC c++
+QuickSelect(A, k)
+  let r be chosen uniformly at random in the range 1 to length(A)
+  let pivot = A[r]
+  let A1, A2 be new arrays
+  # split into a pile A1 of small elements and A2 of big elements
+  for i = 1 to n
+    if A[i] < pivot then
+      append A[i] to A1
+    else if A[i] > pivot then
+      append A[i] to A2
+    else
+      # do nothing
+  end for
+  if k <= length(A1):
+    # it's in the pile of small elements
+    return QuickSelect(A1, k)
+  else if k > length(A) - length(A2)
+    # it's in the pile of big elements
+    return QuickSelect(A2, k - (length(A) - length(A2))
+  else
+    # it's equal to the pivot
+    return pivot
+#+END_SRC
 http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
 http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
 
