--- a/algorithm.org
+++ b/algorithm.org
@@ -82,6 +82,12 @@ void toposort(){
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
 * project G
 ** questions
+http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
+http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
+
+bigo notation : http://bigocheatsheet.com/
+http://www.reddit.com/search?q=google+interview+phone&restrict_sr=off&sort=relevance&t=all
+
 *** kth largest element
 quickselect
 #+BEGIN_SRC c++
@@ -108,10 +114,5 @@ QuickSelect(A, k)
     # it's equal to the pivot
     return pivot
 #+END_SRC
-http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
-http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
-
-bigo notation : http://bigocheatsheet.com/
-
-
-http://www.reddit.com/search?q=google+interview+phone&restrict_sr=off&sort=relevance&t=all
+*** pemutation, combination
+see [[file:cpp/codejam/combination.cpp][combination]]
