--- a/algorithm.org
+++ b/algorithm.org
@@ -87,6 +87,11 @@ void toposort(){
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
 * project G
 ** sort 
+- selection sort : O(n^2), swap O(n)
+- insertion sort : O(n^2) very effective when sorting already sorted data
+- quick sort : O(n log(n)), worst case O(n^2)
+- merge sort : O(n long(n)), used when data size is very large
+stable sort : add index to each object, when compare use index with the primary data.
 #+BEGIN_SRC java
 
   int partition(int[] a, int s, int e){
