--- a/algorithm.org
+++ b/algorithm.org
@@ -91,9 +91,9 @@ void toposort(){
 - insertion sort : O(n^2) very effective when sorting already sorted data
 - quick sort : O(n log(n)), worst case O(n^2)
 - merge sort : O(n long(n)), used when data size is very large
-stable sort : add index to each object, when compare use index with the primary data.
+- stable sort : add index to each object, when compare use index with the primary data.
+- given an array of integers arrange them   such that alternate elements are large and small.(2,5,3,6,...) ; find median and split, and arrange
 #+BEGIN_SRC java
-
   int partition(int[] a, int s, int e){
       p = a[e];
       i = s-1;
@@ -122,6 +122,7 @@ stable sort : add index to each object, when compare use index with the primary 
           }
       });
 #+END_SRC
+
 ** binary search
 #+BEGIN_SRC java
   static int binarySearch(int[] a, int s, int e, int key) {
@@ -310,11 +311,20 @@ json file for each : simple enough to display static info
 - reserse words
 
 
-
+** etc
+- Given a string, convert it into a palindrome with the lease number of insertions possible.
+- Write code to determine if a given input string contains   balanced parentheses. follow up: Modify the code to work for more brackets: {}, [].
 ** ing
-- strtok implementation
 - given set of characters duplicates possible, and given dictionary (list of words). Find longest word from dictionary that can be made from given characters. How will you do it if '*' (matches one wild character) is also included?
 - Access card system design
-- Implement a stack with find_min api as well.
 - Given set of points, find line with max points on it.
 - utf-8 byte stream verification and character extraction.
+
+from http://www.glassdoor.com/Interview/An-array-contains-integers-with-the-property-that-a-particular-number-called-the-majority-element-appears-more-than-50-o-QTN_717526.htm
+Find the local minima in an array. A local minima is defined as a number whose left and right indices are greater than it in value.   View Answers (4)
+An array contains integers with the property that a particular number, called the majority element, appears more than 50% of the time. Give an algo to find this majority number   View Answers (4)
+Implement std::vector's push_back()
+
+Also asked for maximum contiguous subarray problem   Answer Question
+There are n points in a plane. Find the max number of points that lie on a line   View Answer
+In a given binary tree, find the number of elements that lie in a given range.   View Answer
