--- a/algorithm.org
+++ b/algorithm.org
@@ -308,12 +308,10 @@ raw text files : hard to maintain
 db : dynamic query, 
 json file for each : simple enough to display static info
 - find 2 numbers add up to x, with unsorted arrays; sort it, 2 pointers. one from the start, one from the end
-- reserse words
-
-
+- Given a string, convert it into a palindrome with the least number of insertions possible.
+- Write code to determine if a given input string contains balanced parentheses. follow up: Modify the code to work for more brackets: {}, [].
 ** etc
-- Given a string, convert it into a palindrome with the lease number of insertions possible.
-- Write code to determine if a given input string contains   balanced parentheses. follow up: Modify the code to work for more brackets: {}, [].
+
 - majority voting algorithm, http://www.cs.utexas.edu/~moore/best-ideas/mjrty/example.html 
 If the counter is 0, we set the current candidate to e and we set the counter to 1.
 If the counter is not 0, we increment or decrement the counter according to whether e is the current candidate.
