--- a/algorithm.org
+++ b/algorithm.org
@@ -135,7 +135,7 @@ shortest path of all vertex
       }
   }
 #+END_SRC
- 
+- basic : see [[file:cpp/codejam/sotong/workConversion.cpp][workConversion]]
 * samsung strategy
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
