--- a/algorithm.org
+++ b/algorithm.org
@@ -170,6 +170,9 @@ shortest path of all vertex
   }
 #+END_SRC
 - basic : see [[file:cpp/codejam/sotong/workConversion.cpp][workConversion]]
+** stochastic
+- simulated annealing : http://www.theprojectspot.com/tutorial-post/simulated-annealing-algorithm-for-beginners/6
+- genetic algorithm
 * samsung strategy
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
