--- a/algorithm.org
+++ b/algorithm.org
@@ -115,6 +115,7 @@ priorityqueue using max heap
 #+END_SRC
 
 ** greedy
+- activity selection problem
 ** graph
 *** shortest path, Dijstra
 #+BEGIN_SRC c++
@@ -173,26 +174,10 @@ shortest path of all vertex
 ** stochastic
 - simulated annealing : http://www.theprojectspot.com/tutorial-post/simulated-annealing-algorithm-for-beginners/6
 - genetic algorithm
-* samsung strategy
-** useful macros
-#+BEGIN_SRC c++
-// swap
-#define SWAP(a,b) do{int t=a;a=b;b=t;} while(0)
-
-// ddebug
-#define HDEBUG
-#ifdef HDEBUG
-#define hprint(fmt, args...) printf(fmt, ##args)
-#else
-#define hprint(fmt,args...)
-#endif
-#+END_SRC
-- multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
-  .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
-- review 10/24
-  - 500x500 dfs using recursive cause stackoverflow. plz use stack
-  - time is out. I was almost there. sigh!
-* project G
+** implementation
+*** matrix rotation
+- [[file:java/src/codejam/lib/impl/RotateMatrix.java][shift clockwise]]
+- 1.6 NxN matrix, rotate 90 degree clockwise in-place
 ** linked list
 - [[file:java/src/crackcode/List.java::reverseIterative][reverse linked list, reverse every K nodes]]
 - 
@@ -288,7 +273,8 @@ idea : sort prefix sum. and choose
 *** 3sum
 3sum : https://leetcode.com/problems/3sum/
 3sum closest : 
-** lis (longest increasing subsequence)
+** dp
+*** lis (longest increasing subsequence)
 see [[file:cpp/codejam/lis.cpp][lis(java)]]
 http://www.geeksforgeeks.org/dynamic-programming-set-3-longest-increasing-subsequence/
 http://www.geeksforgeeks.org/dynamic-programming-set-14-variations-of-lis/
@@ -487,7 +473,6 @@ computer vision, machine learning
 image distance: compare similarity of two images in color, texture, shape
 
 ** CrackCode
-- 1.6 NxN matrix, rotate 90 degree clockwise in-place
 - 2.2 Implement an algorithm to find the nth to last element of a singly linked list. hint : using 2 node pointers
 - 2.5 circular linked list. finding loop start. hint : using 2 node pointers
 - 4.5 in-order successor
@@ -520,3 +505,22 @@ In a given binary tree, find the number of elements that lie in a given range.
   - online battleship game over the internet
   - wearable device
   - google image search
+* samsung strategy
+** useful macros
+#+BEGIN_SRC c++
+// swap
+#define SWAP(a,b) do{int t=a;a=b;b=t;} while(0)
+
+// ddebug
+#define HDEBUG
+#ifdef HDEBUG
+#define hprint(fmt, args...) printf(fmt, ##args)
+#else
+#define hprint(fmt,args...)
+#endif
+#+END_SRC
+- multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
+  .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
+- review 10/24
+  - 500x500 dfs using recursive cause stackoverflow. plz use stack
+  - time is out. I was almost there. sigh!
