maxheight review initial version

--- a/algorithm.org
+++ b/algorithm.org
@@ -525,6 +525,9 @@ In a given binary tree, find the number of elements that lie in a given range.
 #+END_SRC
 - multiple category : for small N, choose brute force, for large N choose approximation algorithm like greedy.
   .e.g, category 1, N<10 , category 2 N<100, category 3, N<1000
-- review 10/24
+- review 10/24 [[file:cpp/codejam/sotong/151024Toprinter.cpp][ToPrinter]]
   - 500x500 dfs using recursive cause stackoverflow. plz use stack
   - time is out. I was almost there. sigh!
+- reivew 12/5 [[file:cpp/codejam/sotong/151205maxModuleHeight.cpp][maxModuleHeight]]
+  - find maximum height of matching grid, 30000 4x4 grid given.
+    - each grid have height, base = 1 + rand()%6, delta= base + rand()%3
