--- a/algorithm.org
+++ b/algorithm.org
@@ -298,8 +298,10 @@ http://www.programminglogic.com/codesprint-2-problem-subsequence-weighting/
 https://www.topcoder.com/community/data-science/data-science-tutorials/binary-search/
 see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
 #+BEGIN_SRC java
-  static int binarySearch(int[] a, int s, int e, int key) {
-      while (s <= e) {
+  int binarySearch(int[] a, int key) {
+      int s=0;
+      int e=a.length-1;
+      while (s <= e) {            // =
           int m = (s + e) / 2;
           if (a[m] > key) {
               e = m - 1;
@@ -308,6 +310,7 @@ see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
           } else
               return m;
       }
+      // means s>e. so no key found
       return -1;
   }
 #+END_SRC
