--- a/algorithm.org
+++ b/algorithm.org
@@ -295,13 +295,15 @@ http://www.geeksforgeeks.org/dynamic-programming-set-14-variations-of-lis/
 hackerrank, https://www.hackerrank.com/challenges/subsequence-weighting
 http://www.programminglogic.com/codesprint-2-problem-subsequence-weighting/
 ** binary search
-https://www.topcoder.com/community/data-science/data-science-tutorials/binary-search/
-see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
+70억명중에서 특정 정보를 탐색할때 바이너리 서치를 사용하면 33번만에 특정인을 찾을 수 있다. 이유는 소트가 되어 있다는 가정때문에 탐색공간을 매 비교마다 반으로 줄일 수 있기 때문.
+log(n)의 time complexity는 정말 느리게 증가하는 것임.
+
+먼저 정통 binary search의 코디는 아래 처럼.
 #+BEGIN_SRC java
   int binarySearch(int[] a, int key) {
       int s=0;
       int e=a.length-1;
-      while (s <= e) {            // =
+      while (s <= e) {            // notice equal sign
           int m = (s + e) / 2;
           if (a[m] > key) {
               e = m - 1;
@@ -310,10 +312,23 @@ see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
           } else
               return m;
       }
-      // means s>e. so no key found
+      // means s>e. so no key found. means we've searched entire range.
       return -1;
   }
 #+END_SRC
+
+위 개념으로 여러가지 응용을 할 수 있다. 
+같은것이 있을때
+insert position찾을때
+특정 조건을 만족하는 시작점/끝점
+
+문제들...
+
+
+*** reference
+- https://www.topcoder.com/community/data-science/data-science-tutorials/binary-search/
+see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
+
 ** questions
 http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
 http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
@@ -456,7 +471,6 @@ L(i) : position of last 1 bit. eg> 3= 11 -> 1, 4=100 -> 3
 *** segment tree
 [[file:java/src/main/java/codejam/lib/tree/SegmentTree.java][segment tree]]
 
-
 ** trie
 insert/search O(M)
 ** math
@@ -491,8 +505,9 @@ gcd(a,b) = gcd(a, b-a)d, if b > a
   - MapReduce
   - BigTable
 - url shortening service : http://www.hiredintech.com/app#the-system-design-process
+consistent hashing ?
 - load balancing
-  - port forwarding by loac balancer HW
+  - port forwarding by load balancer HW
   - round robin DNS
 *** image search
 computer vision, machine learning
@@ -593,5 +608,8 @@ problems: https://leetcode.com/problems/range-sum-query-2d-mutable/
 
 ** 9/9
 https://leetcode.com/problems/zigzag-iterator/
+
+
+
 
 
