--- a/algorithm.org
+++ b/algorithm.org
@@ -323,18 +323,37 @@ insert position찾을때
 특정 조건을 만족하는 시작점/끝점
 
 문제들...
-
+- 
 
 *** reference
 - https://www.topcoder.com/community/data-science/data-science-tutorials/binary-search/
 see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
 
 ** union find (disjoint set)
-#+BEGIN_SRC java
+applications
+- find cycle in graph
+- find unused variable in source code
+- minimum spaanning tree
 
 
+concept
+1. init parent[i] to i. N set exists first
+2. union(i,j): parent[i] = j
+3. find(i) : traverse to leaf until parent[i]==i
+4. union by rank(optimization 1) : make tree by rank
+5. path compression(optimization 2) : 
+implementation 
+[[file:java/src/main/java/crackcode/tree/UnionFind.java][UnionFind.java]]
 
-#+END_SRC
+
+problems
+- https://leetcode.com/problems/number-of-islands-ii/
+
+references:
+- http://algs4.cs.princeton.edu/15uf/
+- http://www.geeksforgeeks.org/union-find-algorithm-set-2-union-by-rank/
+
+
 ** questions
 http://www.glassdoor.com/Interview/Google-Interview-Questions-E9079.htm
 http://courses.csail.mit.edu/iap/interview/Hacking_a_Google_Interview_Practice_Questions_Person_B.pdf
@@ -613,8 +632,8 @@ problems: https://leetcode.com/problems/range-sum-query-2d-mutable/
 
 
 ** 9/9
-https://leetcode.com/problems/zigzag-iterator/
-
+so beatutiful
+https://leetcode.com/problems/range-addition/
 
 
 
