--- a/algorithm.org
+++ b/algorithm.org
@@ -585,6 +585,58 @@ In a given binary tree, find the number of elements that lie in a given range.
 * system design
 https://www.careercup.com/page?pid=google-interview-questions&topic=system-design-interview-questions
 https://github.com/jwasham/google-interview-university/blob/master/README.md#implement-system-routines
+
+problems:
+- manual map reduce. https://www.careercup.com/question?id=4681660918398976
+Given a large network of computers, each keeping log files of visited urls, find the top ten of the most visited urls. 
+(i.e. have many large <string (url) -> int (visits)> maps, calculate implicitly <string (url) -> int (sum of visits among all distributed maps), and get the top ten in the combined map) 
+The result list must be exact, and the maps are too large to transmit over the network (especially sending all of them to a central server or using MapReduce directly, is not allowed)
+#+BEGIN_SRC text
+Presuming a protocol exists that can ask three questions to each server: 
+
+* the score of a single url 
+* the top 10 
+* the top n that satisfy score >= N 
+
+We program a two pass solution like so: 
+
+We denote the number of servers as S. 
+
+[First pass] 
+(1) Ask every server for its own top ten 
+
+(2) merge the results. For all URLs in the merged set calculate correct values by asking 
+all servers for their scores for each URL. Calculate a set of top ten from our sample. 
+
+(3) pick score of the now tenth URL as the threshold that we try to beat 
+in the second round. We denote the threshold as T. 
+
+[Second pass] 
+(4) Ask every server for all its top N that satisfy score >= T/S 
+
+(5) Merge these bigger samples again as in step (2) 
+
+(6) We now have the correct top ten with correct scores.
+#+END_SRC
+
+* Pregel, 
+http://horicky.blogspot.kr/2010/07/google-pregel-graph-processing.html
+
+
+
+ 
+** url shortening service
+- math
+twitter 15B new tweets per Month -> assuming 10% shortening, 1.5B shorthening URL per month 
+1B requests per month, 
+requests per month : 100M(10%: shortening, 90%:redirect)
+request per second : 400(40: shorten, 360: redirect)
+6B requests in 5 years
+500 bytes per url + 10 bytes for hash -> 510 bytes
+3TB for 5years
+data read per sec : 360*510 = 180k
+data write per sec : 40*510 = 20k
+
 ** scalability for dummy
 ** instagram
 - OS: Ubuntu
