--- a/algorithm.org
+++ b/algorithm.org
@@ -720,3 +720,19 @@ https://leetcode.com/problems/range-addition/
 
 
 
+kadane algorithm, maximum sum subarray
+-1, -2, 3, 4, -5, 6
+
+
+http://codeforces.com/blog/entry/13713
+First time I saw this problem I didn't understand very well the idea. Then I saw it was an optimization in memory use. I would like to share the logic behind this optimization.
+dp[i] -> max value from first position to i
+For each position:
+dp[i] = max(dp[i - 1] + Number[i], 0) // This is max_ending_here
+maxsingleelement = max(maxsingleelement, Number[i]) // Check case all negative values.
+Then we will get our solution taking the max dp[i]
+For each position again:
+sol = max(sol, dp[i]) // This is max_so_far
+This implementation has O(n) in time complexity and memory usage.
+Then we can use only two variables in the solution you gave us. The complexity will be the same but memory usage will be constant .
+By the way, what happen when all the elements are negative values? This is a possible case. Based in this case I like to use a variable (maxsingleelement) that stores the max value from each Number[i]. At the end, if this value is lower than 0 then I return maxsingleelement otherwise return sol (max_so_far)
