--- a/algorithm.org
+++ b/algorithm.org
@@ -96,7 +96,7 @@ priorityqueue using max heap
       }
   }
 
-  void heapExtractMax(int[] a){
+  int heapExtractMax(int[] a){
       if (a.heap_size < 1)
           error "heap underflow";
       int max = a[0];
@@ -299,43 +299,7 @@ http://www.geeksforgeeks.org/dynamic-programming-set-3-longest-increasing-subseq
 http://www.geeksforgeeks.org/dynamic-programming-set-14-variations-of-lis/
 hackerrank, https://www.hackerrank.com/challenges/subsequence-weighting
 http://www.programminglogic.com/codesprint-2-problem-subsequence-weighting/
-** binary search
-70억명중에서 특정 정보를 탐색할때 바이너리 서치를 사용하면 33번만에 특정인을 찾을 수 있다. 이유는 소트가 되어 있다는 가정때문에 탐색공간을 매 비교마다 반으로 줄일 수 있기 때문.
-log(n)의 time complexity는 정말 느리게 증가하는 것임.
 
-먼저 정통 binary search의 코디는 아래 처럼.
-#+BEGIN_SRC java
-  int binarySearch(int[] a, int key) {
-      int s=0;
-      int e=a.length-1;
-      while (s <= e) {            // notice equal sign
-          int m = (s + e) / 2;
-          if (a[m] > key) {
-              e = m - 1;
-          } else if (a[m] < key) {
-              s = m + 1;
-          } else
-              return m;
-      }
-      // means s>e. so no key found. means we've searched entire range.
-      return -1;
-  }
-#+END_SRC
-
-위 개념으로 여러가지 응용을 할 수 있다. 
-같은것이 있을때
-insert position찾을때
-특정 조건을 만족하는 시작점/끝점
-
-문제들...
-- kth smallest element in a soretd matrix https://leetcode.com/problems/kth-smallest-element-in-a-sorted-matrix/
-- median of two sorted array https://leetcode.com/problems/median-of-two-sorted-arrays/
-  - explanation is awesome! https://discuss.leetcode.com/topic/4996/share-my-o-log-min-m-n-solution-with-explanation
-- 
-
-*** reference
-- https://www.topcoder.com/community/data-science/data-science-tutorials/binary-search/
-see [[file:java/src/codejam/lib/BinarySearch.java][BinarySearch(java)]]
 
 ** union find (disjoint set)
 applications
@@ -689,4 +653,5 @@ https://leetcode.com/problems/count-of-range-sum/
 so beatutiful
 https://leetcode.com/problems/range-addition/
 
+sort char by frequency
 
